--- a/package.json
+++ b/package.json
@@ -17,14 +17,27 @@
       "flow"
     ],
     "plugins": [
-      ["module-alias", [
-        { "src": "./stubs/Layout", "expose": "AutodocsLayout" },
-        { "src": "./stubs/Layout", "expose": "DocsLayout" },
-        { "src": "./stubs/Layout", "expose": "RedirectLayout" }
-      ]]
+      [
+        "module-alias",
+        [
+          {
+            "src": "./stubs/Layout",
+            "expose": "AutodocsLayout"
+          },
+          {
+            "src": "./stubs/Layout",
+            "expose": "DocsLayout"
+          },
+          {
+            "src": "./stubs/Layout",
+            "expose": "RedirectLayout"
+          }
+        ]
+      ]
     ]
   },
   "dependencies": {
-    "react": "^15.4.2"
+    "react": "^15.4.2",
+    "slugify": "^1.1.0"
   }
 }
