--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "marked": "^0.3.6",
     "react": "^15.4.2",
+    "react-router-dom": "^4.0.0",
     "slugify": "^1.1.0"
   }
 }
